[gd_scene load_steps=22 format=3 uid="uid://cj6ao7ju12nhg"]

[ext_resource type="Script" uid="uid://dw6w3lvrh2ggp" path="res://Scripts/Start.gd" id="1_ght07"]
[ext_resource type="PackedScene" uid="uid://b6c5d68ty35va" path="res://Templates/Entities/PlayerEntityTemplate-OverheadBasic.tscn" id="3_udv4x"]
[ext_resource type="PackedScene" uid="uid://5tvqunkoa4l7" path="res://Components/Combat/FactionComponent.tscn" id="4_0trfh"]
[ext_resource type="PackedScene" uid="uid://csfqa5yos7088" path="res://Components/Gameplay/UpgradesComponent.tscn" id="5_3wt1t"]
[ext_resource type="PackedScene" uid="uid://d06m60dgdv8ui" path="res://Components/Data/StatsComponent.tscn" id="6_3nle0"]
[ext_resource type="Script" uid="uid://dif3dj8k5ixfw" path="res://Resources/Stat.gd" id="7_7nw6f"]
[ext_resource type="Resource" uid="uid://drkt6rhhny6b4" path="res://Tests/Stats/TestMana.tres" id="8_157i1"]
[ext_resource type="Resource" uid="uid://cu2cyw7oyn5ae" path="res://Tests/Stats/TestGold.tres" id="9_okulf"]
[ext_resource type="Resource" uid="uid://hb6usrrdkrlu" path="res://Tests/Stats/TestAmmo.tres" id="10_fcijy"]
[ext_resource type="PackedScene" uid="uid://bifi5b0gcmh1v" path="res://Components/DebugComponent.tscn" id="11_gj3d5"]
[ext_resource type="PackedScene" uid="uid://dusjndm5o8ehr" path="res://Components/Combat/GunComponent.tscn" id="12_vmhuw"]
[ext_resource type="PackedScene" uid="uid://qn8n4bqswnlr" path="res://Components/Control/MouseRotationComponent.tscn" id="14_8d8lk"]
[ext_resource type="Script" uid="uid://etxev52wl7c8" path="res://UI/Lists/StatsList.gd" id="15_648xx"]
[ext_resource type="Script" uid="uid://ditjvbfbaivqn" path="res://UI/Lists/UpgradesList.gd" id="16_xr2h1"]
[ext_resource type="PackedScene" uid="uid://gvkx3bnathwr" path="res://UI/Views/UpgradeChoiceUI.tscn" id="17_dh703"]
[ext_resource type="Script" uid="uid://cetucfberg5ss" path="res://Resources/Upgrade.gd" id="17_mfdhu"]
[ext_resource type="Resource" uid="uid://qnkhwtlbroqg" path="res://Tests/Upgrades/TestSpeedUpgrade.tres" id="18_0oqoc"]
[ext_resource type="PackedScene" uid="uid://damq04335casd" path="res://UI/Views/UpgradeUI.tscn" id="18_ft6r0"]
[ext_resource type="Resource" uid="uid://bsmyby33ll8ok" path="res://Tests/Upgrades/TestGunUpgrade.tres" id="21_ykf3j"]
[ext_resource type="Resource" uid="uid://btyn678insww1" path="res://Tests/Upgrades/TestCooldownUpgrade.tres" id="22_ucsfw"]
[ext_resource type="Resource" uid="uid://dubsrpy44b7kw" path="res://Tests/Upgrades/TestAmmoUpgrade.tres" id="23_2aq68"]

[node name="UpgradeTest" type="Node2D"]
script = ExtResource("1_ght07")

[node name="PlayerEntityTemplate-OverheadBasic" parent="." instance=ExtResource("3_udv4x")]

[node name="FactionComponent" parent="PlayerEntityTemplate-OverheadBasic" instance=ExtResource("4_0trfh")]
factions = 2

[node name="UpgradesComponent" parent="PlayerEntityTemplate-OverheadBasic" instance=ExtResource("5_3wt1t")]
debugMode = true

[node name="StatsComponent" parent="PlayerEntityTemplate-OverheadBasic" instance=ExtResource("6_3nle0")]
stats = Array[ExtResource("7_7nw6f")]([ExtResource("8_157i1"), ExtResource("9_okulf"), ExtResource("10_fcijy")])
debugMode = true

[node name="DebugComponent" parent="PlayerEntityTemplate-OverheadBasic" instance=ExtResource("11_gj3d5")]
propertiesToWatch = Array[NodePath]([NodePath("../OverheadPhysicsComponent:parameters:speed")])

[node name="GunComponent" parent="PlayerEntityTemplate-OverheadBasic" instance=ExtResource("12_vmhuw")]
visible = false
ammo = ExtResource("10_fcijy")
ammoCost = 1
isEnabled = false
cooldown = 1.01

[node name="MouseRotationComponent" parent="PlayerEntityTemplate-OverheadBasic" node_paths=PackedStringArray("nodeToRotate") instance=ExtResource("14_8d8lk")]
nodeToRotate = NodePath("../GunComponent")
isEnabled = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 8.0
offset_right = 145.0
offset_bottom = 232.0

[node name="StatsUI" type="HBoxContainer" parent="CanvasLayer/VBoxContainer" node_paths=PackedStringArray("statsComponent")]
layout_mode = 2
script = ExtResource("15_648xx")
statsComponent = NodePath("../../../PlayerEntityTemplate-OverheadBasic/StatsComponent")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="RechargeButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "RECHARGE"

[node name="LoanButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "GET LOAN"

[node name="Spacer1" type="Control" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 1

[node name="BuyLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.5, 1, 1, 1)
text = "___ Buy"

[node name="UpgradesList" type="VBoxContainer" parent="CanvasLayer/VBoxContainer" node_paths=PackedStringArray("targetEntity")]
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("16_xr2h1")
upgrades = Array[ExtResource("17_mfdhu")]([ExtResource("18_0oqoc"), ExtResource("21_ykf3j"), ExtResource("22_ucsfw"), ExtResource("23_2aq68")])
targetEntity = NodePath("../../../PlayerEntityTemplate-OverheadBasic")

[node name="TemporaryUpgradeChoiceUI" parent="CanvasLayer/VBoxContainer/UpgradesList" instance=ExtResource("17_dh703")]
layout_mode = 2

[node name="Spacer2" type="Control" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 1

[node name="InstalledContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="InstalledLabel" type="Label" parent="CanvasLayer/VBoxContainer/InstalledContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.5, 1, 1, 1)
text = "___ Installed"

[node name="UpgradeUISpeed" parent="CanvasLayer/VBoxContainer/InstalledContainer" instance=ExtResource("18_ft6r0")]
layout_mode = 2
upgrade = ExtResource("18_0oqoc")

[node name="UpgradeUIGun" parent="CanvasLayer/VBoxContainer/InstalledContainer" instance=ExtResource("18_ft6r0")]
layout_mode = 2
upgrade = ExtResource("21_ykf3j")

[node name="UpgradeUICooldown" parent="CanvasLayer/VBoxContainer/InstalledContainer" instance=ExtResource("18_ft6r0")]
layout_mode = 2
upgrade = ExtResource("22_ucsfw")

[node name="UpgradeUIAmmo" parent="CanvasLayer/VBoxContainer/InstalledContainer" instance=ExtResource("18_ft6r0")]
layout_mode = 2
upgrade = ExtResource("23_2aq68")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/RechargeButton" to="PlayerEntityTemplate-OverheadBasic/StatsComponent" method="changeStatValue" binds= [&"testMana", 50]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoanButton" to="PlayerEntityTemplate-OverheadBasic/StatsComponent" method="changeStatValue" binds= [&"testGold", 100]]
[connection signal="didChooseUpgrade" from="CanvasLayer/VBoxContainer/UpgradesList" to="PlayerEntityTemplate-OverheadBasic/UpgradesComponent" method="addOrLevelUpUpgrade"]
